# eliduprees-emg-mouse

./: .gitignore  README.md
bluetooth-test/: Cargo.toml
bluetooth-test/src/: main.rs
emg-client/: Cargo.toml
emg-client/secrets/: local_cert.der  local_private_key.der
emg-client/src/: bluetooth.rs  follower.rs  main.rs  remote_time_estimator.rs  rocket_glue.rs  serial_port_communication.rs  signal.rs  supervisor.rs  utils.rs  webserver.rs  webserver_glue.rs
emg-client/web_frontend/: index.html  index2.html
emg-client/web_frontend/media/: frontend.js
emg-mouse-shared/: Cargo.toml
emg-mouse-shared/src/: lib.rs
emg-server/: .gitignore  Cargo.toml  sdkconfig.defaults
emg-server-c/: CMakeLists.txt  sdkconfig.defaults.esp32
emg-server-c/main/: CMakeLists.txt  emg_server.c  emg_server.h
emg-server/.cargo/: config.toml
emg-server/src/: main.rs
gaze_tracking_experiments/: formulas.py  graphs.py  main.py
gaze_tracking_experiments/gaze-tracking/: Cargo.toml
gaze_tracking_experiments/gaze-tracking/src/: face_position_model.rs  main.rs  utils.rs
scripts/: rerun_on_x_error.py
serial_port_test/: Cargo.toml
serial_port_test/src/: main.rs
supervisor/: supervisor.py
