[package]
name = "emg-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
enigo = { git = "https://github.com/elidupree/enigo/" }
rodio = "0.14.0"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"]}
crossbeam = "0.8.1"
ordered-float = "2.10.0"
rustfft = "6.0.1"
emg-mouse-shared = { path = "../emg-mouse-shared" }


[profile.dev]
opt-level = 3
