[package]
name = "emg-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
enigo = { git = "https://github.com/elidupree/enigo/" }
rodio = "0.14.0"
actix-web = "4.0.1"
actix-files = "0.6.0"
crossbeam = "0.8.1"
ordered-float = "2.10.0"
rustfft = "6.0.1"
statrs = "0.15"
itertools = "0.10.3"
env_logger = "0.9.0"
emg-mouse-shared = { path = "../emg-mouse-shared" }


[profile.dev]
opt-level = 3
