[package]
name = "emg-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.55"
bincode = "1.3.3"
serde_json = "1.0"
enigo = { git = "https://github.com/elidupree/enigo/" }
rodio = "0.15.0"
tokio = "1.17.0"
tokio-stream = "0.1.8"
async-trait = "0.1.52"
futures = "0.3.21"
quinn = "0.8.1"
bytes = "1.1.0"
rustls = { version = "0.20.4", features = ["quic"] }
rcgen = "0.9.2"
actix = "0.13.0"
actix-web = "4.0.1"
actix-files = "0.6.0"
crossbeam = "0.8.1"
ordered-float = "2.10.0"
rustfft = "6.0.1"
statrs = "0.15"
itertools = "0.10.3"
env_logger = "0.9.0"
log = "0.4.14"
emg-mouse-shared = { path = "../emg-mouse-shared" }
rdev = "0.5.1"


[profile.dev]
opt-level = 3
