[package]
name = "emg-server"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
esp-idf-sys = { version = "0.30.6", features = ["binstart"] }
esp-idf-svc = "0.36.2"
esp-idf-hal = "0.32.1"
embedded-svc = "0.16.4"
embedded-hal = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"
emg-mouse-shared = { path = "../emg-mouse-shared" }

[build-dependencies]
embuild = "0.28"
anyhow = "1"

# Future; might be possible once https://github.com/rust-lang/cargo/issues/9096 hits Cargo nightly:
#rust-esp32-ulp-blink = { git = "https://github.com/ivmarkov/rust-esp32-ulp-blink", artifact = "bin" }