[package]
name = "gaze-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
serde = { version = "1.0.137", features = ["rc"] }
serde_json = "1.0.81"